@@ -1,3 +1,8 @@
+2005-10-23  Romain Francoise  <romain@orebokech.com>
+
+	* emulation/viper.el (viper-set-hooks): Quote forms passed to
+	`eval-after-load' to avoid evaluating their result.
+
 2005-10-23  Michael Albinus  <michael.albinus@gmx.de>
 
 	* files.el (directory-listing-before-filename-regexp): New
